:lipstick: Fix code snippet overflow in tracks about section

--- a/app/css/pages/track-about.css
+++ b/app/css/pages/track-about.css
@@ -144,6 +144,11 @@
                 @screen md {
                     max-width: 450px;
                 }
+
+                & > code {
+                    display: block;
+                    overflow-x: auto;
+                }
             }
         }
     }
